add setup script and ability to open file in vsc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,7 @@ unbind '"'
 unbind %
 bind + split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
+bind r source-file ~/.tmux.conf
 
 # custom script
-bind-key -r i run-shell "tmux split-window \"source ~/dev/util/treer.sh\""
+bind-key -r i run-shell "tmux split-window \"source ~/.dotfiles/treer.sh\""
