--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,4 +11,4 @@ bind - split-window -v -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf
 
 # custom script
-bind-key -r i run-shell "tmux split-window \"source ~/.dotfiles/treer.sh\""
+bind-key -r i run-shell "tmux split-window \"source /root/dev/.dotfiles/treer.sh\""
