fix color scheme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
+set -g default-terminal "tmux-256color"                                              
+# enable 24 bit support                                                              
+set -g terminal-overrides ',xterm-256color:Tc'
 set-option -g prefix M-a
 bind-key M-a send-prefix
 
