--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,17 @@
 # remap prefix from 'C-b' to 'C-a'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins "battery weather time"
+set -g @dracula-show-powerline true
+set -g @dracula-show-fahrenheit false
+set -g @dracula-military-time true
+
+#set -g @plugin 'egel/tmux-gruvbox'
+#set -g @tmux-gruvbox 'dark' # or 'light'
+
+#set -g @plugin "arcticicestudio/nord-tmux"
+
 unbind C-b
 set -g default-terminal "tmux-256color"                                              
 # enable 24 bit support                                                              
@@ -15,19 +28,5 @@ bind r source-file ~/.tmux.conf
 
 # custom script
 bind-key -r i run-shell "tmux split-window \"source /root/dev/.dotfiles/treer.sh\""
-
-# plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-
-# dracula customizations
-set -g @dracula-show-left-icon smiley
-set -g @dracula-show-flags true
-set -g @dracula-plugins "battery weather time"
-set -g @dracula-show-powerline true
-set -g @dracula-show-fahrenheit false
-set -g @dracula-military-time true
 
 run '~/.tmux/plugins/tpm/tpm'
