--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,8 +13,8 @@ set -g @dracula-military-time true
 #set -g @plugin "arcticicestudio/nord-tmux"
 
 unbind C-b
-set -g default-terminal "tmux-256color"                                              
-# enable 24 bit support                                                              
+set -g default-terminal "tmux-256color"
+# enable 24 bit support
 set -g terminal-overrides ',xterm-256color:Tc'
 set-option -g prefix M-a
 bind-key M-a send-prefix
@@ -28,5 +28,6 @@ bind r source-file ~/.tmux.conf
 
 # custom script
 bind-key -r i run-shell "tmux split-window \"source /root/dev/.dotfiles/treer.sh\""
+bind-key -r K run-shell  "tmux split-window \"tmux-sessionizer.sh\""
 
 run '~/.tmux/plugins/tpm/tpm'
