--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # remap prefix from 'C-b' to 'C-a'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+
 set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "battery weather time"
 set -g @dracula-show-powerline true
@@ -25,6 +26,17 @@ unbind %
 bind + split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf
+
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# vim-like pane switching
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
 
 # custom script
 bind-key -r i run-shell "tmux split-window \"source /root/dev/.dotfiles/treer.sh\""
