start new config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,7 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 # custom script
-bind-key -r i run-shell "tmux split-window \"source /root/dev/.dotfiles/treer.sh\""
+bind-key -r i run-shell "tmux split-window \"source ~/dev/.dotfiles/treer.sh\""
 bind-key -r K run-shell  "tmux split-window \"tmux-sessionizer.sh\""
 
 run '~/.tmux/plugins/tpm/tpm'
