--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,17 +1,8 @@
-# remap prefix from 'C-b' to 'C-a'
+set -s escape-time 0
+
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @plugin 'dracula/tmux'
-set -g @dracula-plugins "battery weather time"
-set -g @dracula-show-powerline true
-set -g @dracula-show-fahrenheit false
-set -g @dracula-military-time true
-
-#set -g @plugin 'egel/tmux-gruvbox'
-#set -g @tmux-gruvbox 'dark' # or 'light'
-
-#set -g @plugin "arcticicestudio/nord-tmux"
+set -g status-style 'bg=#333333 fg=#5eacd3'
 
 unbind C-b
 set -g default-terminal "tmux-256color"
@@ -40,6 +31,6 @@ bind -r l select-pane -R
 
 # custom script
 bind-key -r i run-shell "tmux split-window \"source ~/dev/.dotfiles/treer.sh\""
-bind-key -r K run-shell  "tmux split-window \"tmux-sessionizer.sh\""
+bind-key -r K run-shell  "tmux split-window \"tmux-sessionizer\""
 
 run '~/.tmux/plugins/tpm/tpm'
