--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,7 +30,7 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 # custom script
-bind-key -r i run-shell "tmux split-window \"source ~/dev/.dotfiles/treer.sh\""
-bind-key -r K run-shell  "tmux split-window \"tmux-sessionizer\""
+bind-key -r i run-shell "tmux split-window \"source ~/dev/.dotfiles/scripts/treer\""
+bind-key -r K run-shell  "tmux split-window \"~/dev/.dotfiles/scripts/tmux-sessionizer\""
 
 run '~/.tmux/plugins/tpm/tpm'
