--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,34 @@
 set -s escape-time 0
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
 
-set -g status-style 'bg=#333333 fg=#5eacd3'
+set-option -g status-position top
+
+set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
+set -g @catppuccin_window_status_enable "yes"
+
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_middle_separator "  █"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_status_modules_right "directory user host"
+set -g @catppuccin_status_left_separator  " "
+# set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator "█"
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 unbind C-b
 set -g default-terminal "tmux-256color"
