--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,5 +58,6 @@ bind -r l select-pane -R
 # custom script
 bind-key -r i run-shell "tmux split-window \"source ~/dev/.dotfiles/scripts/treer\""
 bind-key -r K run-shell  "tmux split-window \"~/dev/.dotfiles/scripts/tmux-sessionizer\""
+bind-key -r b run-shell  "tmux neww \"cb\""
 
 run '~/.tmux/plugins/tpm/tpm'
