--- a/.config/i3/config
+++ b/.config/i3/config
@@ -28,7 +28,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- betterlockscreen -l dim
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -i ~/lockscreen.png # betterlockscreen -l dim
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -272,8 +272,8 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-bindsym $mod+Shift+x exec betterlockscreen -l dim
-bindsym $mod+Shift+m exec betterlockscreen -l dim -s
+bindsym $mod+Shift+x exec i3lock -i ~/lockscreen.png #betterlockscreen -l dim
+bindsym $mod+Shift+m exec i3lock -i ~/lockscreen.png # betterlockscreen -l dim -s
 
 exec --no-startup-id cb ~/.bg-image
 exec --no-startup-id compton
