--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set -s escape-time 0
+set -s repeat-time 0
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
@@ -56,8 +57,9 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 # custom script
-bind-key -r i run-shell "tmux split-window \"source ~/dev/.dotfiles/scripts/treer\""
-bind-key -r K run-shell  "tmux split-window \"~/dev/.dotfiles/scripts/tmux-sessionizer\""
+bind-key -r i run-shell "tmux split-window treer"
+bind-key -r K run-shell  "tmux split-window tmux-sessionizer"
 bind-key -r b run-shell  "tmux neww \"cb\""
+bind-key -r š run-shell  "tmux neww -c '$HOME/neovim' -n nvim"
 
 run '~/.tmux/plugins/tpm/tpm'
