kill session and switch to last

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,6 +60,7 @@ bind -r l select-pane -R
 bind-key -r i run-shell "tmux split-window treer"
 bind-key -r K run-shell  "tmux split-window tmux-sessionizer"
 bind-key -r b run-shell  "tmux neww \"cb\""
-bind-key -r š run-shell  "tmux neww -c '$HOME/neovim' -n nvim"
+bind-key -r š run-shell  "tmux-sessionizer ~/neovim"
+bind-key -r ž run-shell  "last-session"
 
 run '~/.tmux/plugins/tpm/tpm'
