--- a/.config/i3/config
+++ b/.config/i3/config
@@ -41,6 +41,9 @@ bindsym --release XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volum
 bindsym --release XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym --release XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+bindsym Print exec flameshot gui
+bindsym $mod+p exec flameshot gui
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
