--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,7 +59,7 @@ bind -r l select-pane -R
 # custom script
 bind-key -r i run-shell "tmux split-window treer"
 bind-key -r K run-shell  "tmux split-window tmux-sessionizer"
-bind-key -r b run-shell  "tmux neww \"cb\""
+bind-key -r B run-shell  "tmux neww \"cb\""
 bind-key -r š run-shell  "tmux-sessionizer ~/neovim"
 bind-key -r ž run-shell  "last-session"
 
