--- a/.config/i3/config
+++ b/.config/i3/config
@@ -87,7 +87,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+s+h split h
+bindsym $mod+b split h
 
 # split in vertical orientation
 bindsym $mod+v split v
