--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,5 +62,6 @@ bind-key -r K run-shell  "tmux split-window tmux-sessionizer"
 bind-key -r B run-shell  "tmux neww \"cb\""
 bind-key -r š run-shell  "tmux-sessionizer ~/neovim"
 bind-key -r ž run-shell  "last-session"
+bind-key -r r run-shell  "tmux move-window -r"
 
 run '~/.tmux/plugins/tpm/tpm'
