--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -18,8 +18,9 @@ general {
 
 order += "wireless wlp2s0"
 order += "volume master"
-order += "load"
+# order += "load"
 order += "cpu_usage"
+order += "memory"
 order += "disk /"
 # order += "disk /media/media"
 # order += "ethernet eth0"
@@ -36,6 +37,11 @@ volume master {
 	mixer_idx = 0
 	# termsyn font
 	# format = "À %volume "
+}
+
+# show usage of ram
+memory {
+    format = "   %used/%total "
 }
 
 battery all {
