--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,6 +61,7 @@ bind-key -r i run-shell "tmux split-window treer"
 bind-key -r K run-shell  "tmux split-window tmux-sessionizer"
 bind-key -r B run-shell  "tmux neww \"cb\""
 bind-key -r š run-shell  "tmux-sessionizer ~/neovim"
+bind-key -r đ run-shell  "tmux-sessionizer ~/.dumpspace"
 bind-key -r ž run-shell  "last-session"
 bind-key -r r run-shell  "tmux move-window -r"
 
