--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
 
 set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_modules_right "directory user host"
+set -g @catppuccin_status_modules_right "directory date_time"
 set -g @catppuccin_status_left_separator  " "
 # set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_right_separator "█"
@@ -30,6 +30,7 @@ set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 
 set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_date_time_text "%H:%M"
 
 unbind C-b
 set -g default-terminal "tmux-256color"
