--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,35 +2,28 @@ set -s escape-time 0
 set -s repeat-time 0
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'rose-pine/tmux'
 
 set-option -g status-position top
 
-set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
-set -g @catppuccin_window_status_enable "yes"
+set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
 
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator "  █"
+set -g @rose_pine_host 'on' # Enables hostname in the status bar
+set -g @rose_pine_date_time '%H:%M'
+set -g @rose_pine_user 'on' # Turn on the username component in the statusbar
+set -g @rose_pine_directory 'on' # Turn on the current folder component in the status bar
+set -g @rose_pine_bar_bg_disable 'on' # Disables background color, for transparent terminal emulators
+# If @rose_pine_bar_bg_disable is set to 'on', uses the provided value to set the background color
+# It can be any of the on tmux (named colors, 256-color set, `default` or hex colors)
+# See more on http://man.openbsd.org/OpenBSD-current/man1/tmux.1#STYLES
+set -g @rose_pine_bar_bg_disabled_color_option 'default'
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_modules_right "directory date_time"
-set -g @catppuccin_status_left_separator  " "
-# set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
-set -g @catppuccin_date_time_text "%H:%M"
+# Example values for these can be:
+set -g @rose_pine_left_separator ' > ' # The strings to use as separators are 1-space padded
+set -g @rose_pine_right_separator ' < ' # Accepts both normal chars & nerdfont icons
+set -g @rose_pine_field_separator ' | ' # Again, 1-space padding, it updates with prefix + I
+set -g @rose_pine_window_separator ' - ' # Replaces the default `:` between the window number and name
 
 unbind C-b
 set -g default-terminal "tmux-256color"
