--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set -g @plugin 'rose-pine/tmux'
 
 set-option -g status-position top
 
-set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
+set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
 
 set -g @rose_pine_host 'on' # Enables hostname in the status bar
 set -g @rose_pine_date_time '%H:%M'
