--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,6 @@
-theme = rose-pine
+theme = rose-pine-moon
 fullscreen = false
 background-opacity = 0.85
 gtk-titlebar = false
+
+keybind=ctrl+ć=reload_config
