--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,7 +51,7 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 # custom script
-bind-key -r i run-shell "tmux split-window treer"
+bind-key -r i run-shell "tmux neww 'tmux-pane'"
 bind-key -r K run-shell  "tmux split-window tmux-sessionizer"
 bind-key -r B run-shell  "tmux neww \"cb\""
 bind-key -r š run-shell  "tmux-sessionizer ~/neovim"
