--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,7 @@ set -g @rose_pine_window_separator ' - ' # Replaces the default `:` between the 
 
 unbind C-b
 set -g default-terminal "tmux-256color"
+set -g default-shell /usr/bin/fish
 # enable 24 bit support
 set -g terminal-overrides ',xterm-256color:Tc'
 set-option -g prefix M-a
