--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -16,6 +16,9 @@ bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 bindd = SUPER, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
 bindd = SUPER, G, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
 
+# Optional: bind a key to reload kanshi if needed
+bind = SUPER, Đ, exec, pkill kanshi && kanshi
+
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
