--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -4,8 +4,8 @@
 # You must relaunch Hyprland after changing any envs (use Super+Esc, then Relaunch)
 
 # Optimized for retina-class 2x displays, like 13" 2.8K, 27" 5K, 32" 6K.
-env = GDK_SCALE,2
-monitor=,preferred,auto,auto
+# env = GDK_SCALE,2
+# monitor=,preferred,auto,auto
 
 # Good compromise for 27" or 32" 4K monitors (but fractional!)
 # env = GDK_SCALE,1.75
@@ -18,3 +18,5 @@ monitor=,preferred,auto,auto
 # Example for Framework 13 w/ 6K XDR Apple display
 # monitor = DP-5, 6016x3384@60, auto, 2
 # monitor = eDP-1, 2880x1920@120, auto, 2
+
+env = GDK_SCALE,2
