--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -22,3 +22,54 @@ bind = SUPER, Đ, exec, pkill kanshi && kanshi
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+
+# i3 compat
+
+# Window focus movement (vim-style)
+unbind = SUPER, K
+bind = SUPER, H, movefocus, l
+bind = SUPER, J, movefocus, d
+bind = SUPER, K, movefocus, u
+bind = SUPER, L, movefocus, r
+
+# Window focus movement (arrow keys)
+bind = SUPER, left, movefocus, l
+bind = SUPER, down, movefocus, d
+bind = SUPER, up, movefocus, u
+bind = SUPER, right, movefocus, r
+
+# Move focused window (vim-style)
+bind = SUPER SHIFT, H, movewindow, l
+bind = SUPER SHIFT, J, movewindow, d
+bind = SUPER SHIFT, K, movewindow, u
+bind = SUPER SHIFT, L, movewindow, r
+
+# Move focused window (arrow keys)
+bind = SUPER SHIFT, left, movewindow, l
+bind = SUPER SHIFT, down, movewindow, d
+bind = SUPER SHIFT, up, movewindow, u
+bind = SUPER SHIFT, right, movewindow, r
+
+# Layout controls
+unbind = SUPER, V
+bind = SUPER, V, togglesplit  # Toggle split direction (equivalent to i3's split v/h)
+bind = SUPER, F, fullscreen, 0  # Fullscreen toggle
+
+# Workspace switching
+bind = SUPER, 1, workspace, 1
+bind = SUPER, 2, workspace, 2
+bind = SUPER, 3, workspace, 3
+bind = SUPER, 4, workspace, 4
+bind = SUPER, 5, workspace, 5
+bind = SUPER, 6, workspace, 6
+bind = SUPER, 7, workspace, 7
+bind = SUPER, 8, workspace, 8
+bind = SUPER, 9, workspace, 9
+bind = SUPER, 0, workspace, 10
+
+# Additional Hyprland-specific bindings that might be useful
+# Resize windows (similar to i3's resize mode)
+binde = SUPER CTRL, H, resizeactive, -10 0
+binde = SUPER CTRL, L, resizeactive, 10 0
+binde = SUPER CTRL, K, resizeactive, 0 -10
+binde = SUPER CTRL, J, resizeactive, 0 10
