--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -16,6 +16,12 @@ bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 bindd = SUPER, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
 bindd = SUPER, G, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
 
+unbind = SUPER, P
+bindd = SUPER, P, Screenshot of region, exec, omarchy-cmd-screenshot
+
+# Mouse gesture button
+bind = , mouse:277, exec, wtype -M ctrl -k w -m ctrl
+
 # Optional: bind a key to reload kanshi if needed
 bind = SUPER, Đ, exec, pkill kanshi && kanshi
 
@@ -67,7 +73,6 @@ bind = SUPER, 8, workspace, 8
 bind = SUPER, 9, workspace, 9
 bind = SUPER, 0, workspace, 10
 
-# Additional Hyprland-specific bindings that might be useful
 # Resize windows (similar to i3's resize mode)
 binde = SUPER CTRL, H, resizeactive, -10 0
 binde = SUPER CTRL, L, resizeactive, 10 0
