--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -19,6 +19,9 @@ bindd = SUPER, G, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.co
 unbind = SUPER, P
 bindd = SUPER, P, Screenshot of region, exec, omarchy-cmd-screenshot
 
+# Restart kanshi
+bind = SUPER, F12, exec, bash -c 'pkill kanshi; sleep 1; kanshi &'
+
 # Mouse gesture button
 bind = , mouse:277, exec, wtype -M ctrl -k w -m ctrl
 
