--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -2,3 +2,10 @@
 # exec-once = uwsm app -- my-service
 # Let kanshi handle monitor configuration
 exec-once = kanshi
+
+# Auto-start applications on specific workspaces
+exec-once = [workspace 1 silent] $terminal
+exec-once = [workspace 2 silent] $browser
+exec-once = [workspace 3 silent] uwsm app -- spotify
+exec-once = [workspace 5 silent] omarchy-launch-webapp "https://web.whatsapp.com/"
+exec-once = [workspace 9 silent] uwsm app -- 1password
