--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,8 +1,9 @@
 source = ~/.config/omarchy/current/theme/hyprlock.conf
 
 background {
-    monitor =
-    color = $color
+    path = ~/lockscreen.png
+    blur_passes = 3
+    blur_size = 8
 }
 
 animations {
