--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -20,7 +20,7 @@ unbind = SUPER, P
 bindd = SUPER, P, Screenshot of region, exec, omarchy-cmd-screenshot
 
 # Restart kanshi
-bind = SUPER, F12, exec, bash -c 'pkill kanshi; sleep 1; kanshi &'
+bind = SUPER, F12, exec, bash -c 'kanshi &'
 
 # Mouse gesture button
 bind = , mouse:277, exec, wtype -M ctrl -k w -m ctrl
