replace alacritty with ghostty

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -54,7 +54,7 @@
   "cpu": {
     "interval": 5,
     "format": "󰍛",
-    "on-click": "alacritty -e btop"
+    "on-click": "ghostty -e btop"
   },
   "clock": {
     "format": "{:L%A %H:%M}",
@@ -73,7 +73,7 @@
     "tooltip-format-disconnected": "Disconnected",
     "interval": 3,
     "spacing": 1,
-    "on-click": "alacritty --class=Impala -e impala"
+    "on-click": "ghostty --class=Impala -e impala"
   },
   "battery": {
     "format": "{capacity}% {icon}",
@@ -103,7 +103,7 @@
   },
   "pulseaudio": {
     "format": "{icon}",
-    "on-click": "alacritty --class=Wiremix -e wiremix",
+    "on-click": "ghostty --class=Wiremix -e wiremix",
     "on-click-right": "pamixer -t",
     "tooltip-format": "Playing at {volume}%",
     "scroll-step": 5,
