--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -2,8 +2,9 @@ source = ~/.config/omarchy/current/theme/hyprlock.conf
 
 background {
     path = ~/lockscreen.png
+    monitor =
+    color = $color
     blur_passes = 3
-    blur_size = 8
 }
 
 animations {
