--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -5,11 +5,12 @@ $browser = omarchy-launch-browser
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER SHIFT, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER, M, Music, exec, uwsm app -- spotify
-bindd = SUPER, N, Neovim, exec, $terminal -e nvim
+bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
+bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
+bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER, T, Activity, exec, $terminal -e btop
 bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
-bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
+bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
